--- a/bower.json
+++ b/bower.json
@@ -17,6 +17,8 @@
   ],
   "dependencies": {
     "versal-gadget-api": "~0.0.4",
-    "versal-component-runtime": "~0.2.4"
+    "versal-component-runtime": "~0.2.4",
+    "backbone": "~1.1.2",
+    "jquery": "~2.1.1"
   }
 }
